<resources>
    <!--    <string name="BaseUrl">https://10.0.2.2:7066/api/</string>-->
    <string name="BaseUrl">https://af3b–132–70-1-38.eu.ngrok.io/api</string>
    <string name="BaseUrlNoAPI">https://10.0.2.2:7066/</string>
    <string name="app_name">DTWChats</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now!</string>
    <string name="login_now">Login now!</string>
    <string name="nickname">Nickname</string>
    <string name="server">Server</string>
    <string name="contacts_name">Contacts Name</string>
    <string name="default_avatar">default avatar</string>
    <string name="type_your_message">Type your message</string>
    <string name="my_name">My Name</string>
    <string name="floating_button">floating button</string>
    <string name="last_message">Last Message</string>
    <string name="contact_name">Contact Name</string>
    <string name="_12_34">12:34</string>
    <string name="channel_name">Messages</string>
    <string name="channel_description">Messages received</string>
    <string name="Settings">Settings</string>
    <string name="server_address">Server Address</string>
    <string name="preference_file_key">server_address</string>
    <string name="save">Save</string>
    <string-array name="spinner_array">
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

</resources>